// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should render 1`] = `
<div
  className="container"
>
  <main
    className="main"
  />
</div>
`;

exports[`<Container /> should render afterMain 1`] = `
<div
  className="container"
>
  <main
    className="main"
  />
  <span>
    Guys!
  </span>
</div>
`;

exports[`<Container /> should render beforeMain 1`] = `
<div
  className="container"
>
  <span>
    Hello
  </span>
  <main
    className="main"
  />
</div>
`;

exports[`<Container /> should render children and main prop 1`] = `
<div
  className="container"
>
  <span>
    Hello
  </span>
  <main
    className="main"
  >
    <span>
      There
    </span>
  </main>
  <span>
    Guys!
  </span>
</div>
`;

exports[`<Container /> should render main 1`] = `
<div
  className="container"
>
  <main
    className="main"
  >
    <span>
      There
    </span>
  </main>
</div>
`;
